[gd_scene load_steps=10 format=2]

[ext_resource path="res://fonts/Droid_Sans_Bold.tres" type="DynamicFont" id=1]
[ext_resource path="res://fonts/Droid_Sans_Regular_medium.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/WelcomePanel.gd" type="Script" id=3]
[ext_resource path="res://fonts/Droid_Sans_Bold_medium.tres" type="DynamicFont" id=4]
[ext_resource path="res://scripts/ViewDetector.gd" type="Script" id=5]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 2, 1 )

[sub_resource type="ViewportTexture" id=2]
flags = 12
viewport_path = NodePath("Viewport")

[sub_resource type="SpatialMaterial" id=3]
resource_local_to_scene = true
flags_unshaded = true
albedo_texture = SubResource( 2 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 1, 0.0698227, 0.219944 )

[node name="WelcomePanel" type="Spatial"]
script = ExtResource( 3 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 1024, 512 )
msaa = 6
render_target_v_flip = true

[node name="ColorRect" type="ColorRect" parent="Viewport"]
margin_right = 1024.0
margin_bottom = 1024.0
color = Color( 0, 0, 0, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="Viewport"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1004.0
margin_bottom = 492.0
custom_fonts/bold_italics_font = ExtResource( 1 )
custom_fonts/bold_font = ExtResource( 4 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[b]Message of the day[/b]"
text = "Message of the day"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = SubResource( 3 )

[node name="ScrollDown" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 0.526852, 0.849957, 0, -0.849957, 0.526852, 0, 0.119169, 0.197246 )
script = ExtResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="ScrollDown"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0827371 )
shape = SubResource( 4 )

[node name="ScrollUp" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0482503, -0.502063 )
script = ExtResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="ScrollUp"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0827371 )
shape = SubResource( 4 )

[connection signal="not_viewing" from="ScrollDown" to="." method="_on_NotViewing_ScrollDown"]
[connection signal="viewing" from="ScrollDown" to="." method="_on_Viewing_ScrollDown"]
[connection signal="not_viewing" from="ScrollUp" to="." method="_on_NotViewing_ScrollUp"]
[connection signal="viewing" from="ScrollUp" to="." method="_on_Viewing_ScrollUp"]
